moved the checkbox required asterisk to the span that holds the label, to avoid jumping around of the label when the errorText div is shown

--- a/widgets/_lhfs_widget.scss
+++ b/widgets/_lhfs_widget.scss
@@ -127,12 +127,13 @@
       &:after {
         content: "";
       }
-      &.required:after {
-        margin-left: 5px;
-        content: "*";
-        color: $red;
-      }
     }
+    li.label.required:after, label.checkbox.required span.text:after {
+      margin-left: 5px;
+      content: "*";
+      color: $red;
+    }
+
     input[type=text], input[type=email], input[type=number], select, .ddTitle {
       display: block;
     }
